# CRCpp

./: meson.build  meson_options.txt
inc/: CRC.h
